--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta
+      name="description"
+      content="Solusi Darurat Mobil Anda Cepat, Tepat, dan Selalu Siap di Mana Saja"
+    />
+    <meta name="keywords" content="Car, Garage, Fix car" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Drivix</title>
   </head>
   <body>
     <div id="root"></div>
